devops/asp-net-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-deploy
  namespace: aspnetapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventoryapp
  template:
    metadata:
      labels:
        app: inventoryapp
    spec:
      containers:
        - name: inventory-container
          image: tipu247/inventoryservice:v1
          ports:
            - containerPort: 80
---

# ========================
# Service for ASP.NET App
# ========================
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: aspnetapp
spec:
  selector:
    app: inventoryapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
