devops/iis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iis-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: inventory.csl.com  # Replace with your domain or IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inventory-service  # Name of your Nginx Kubernetes service
            port:
              number: 80  # Adjust port number based on your service
